<resources>
    <string name="app_name">CSE476 Assignment 3</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Keep me logged in</string>

    <string name="go_to_leaderboard">Leaderboard</string>
    <string name="go_to_community_posts">Community Posts</string>
    <!---<string name="leaderboard_page">Leaderboard Page</string> -->
    <string name="leaderboard_text_page">🏆 Leaderboard 🏆</string>
    <!--<string name="welcome_msg">Welcome to your account!</string> -->
    <string name="logout">Logout</string>
    <string name="user_default">User</string>
    <!--<string name="my_bck_btn_color">#d7d9d7</string> -->

    <string name="account_settings_btn">Account Settings</string>
    <string name="messages_btn">Messages</string>
    <string name="community_post_btn">Community Posts</string>
    <string name="leaderboard_btn">Leaderboard</string>
    <string name="achievements_btn">Achievements</string>

    <string name="preferences_title">Account Preferences</string>
    <string name="bio_label">Bio</string>
    <string name="bio_hint">Tell others about yourself</string>
    <string name="location_tracking">Enable location tracking</string>
    <string name="dark_mode">Dark mode</string>
    <string name="save_preferences">Save preferences</string>
    <string name="preferences_saved">Preferences saved</string>

    <!-- <string name="first_place">1</string> -->
    <!-- <string name="second_place">2</string> -->
    <!-- <string name="third_place">3</string> -->
    <string name="fourth_place">4</string>
    <string name="fifth_place">5</string>
    <string name="sixth_place">6</string>
    <string name="seventh_place">7</string>
    <string name="eighth_place">8</string>
    <string name="ninth_place">9</string>
    <string name="tenth_place">10</string>
    <string name="first_place_name">DogeMaster ‍🐶🌟</string>
    <string name="second_place_name">ShrekOnFleek 🐸🔥</string>
    <string name="third_place_name">RickRoller 🎵🤘</string>
    <string name="fourth_place_name">PizzaWizard 🍕🪄</string>
    <string name="fifth_place_name">BigChungus 🐰💪</string>
    <string name="sixth_place_name">BigBrainEnergy 🧠💥</string>
    <string name="seventh_place_name">HonkMaster 🦆🎺</string>
    <string name="eighth_place_name">WaffleWowza 🧇✨</string>
    <string name="ninth_place_name">PewPewPotato 🔫🥔</string>
    <string name="tenth_place_name">CringePatrol 🚨🤡</string>
    <string name="first_place_points">1200 pts</string>
    <string name="second_place_points">1100 pts</string>
    <string name="third_place_points">998 pts</string>
    <string name="fourth_place_points">950 pts</string>
    <string name="fifth_place_points">947 pts</string>
    <string name="sixth_place_points">912 pts</string>
    <string name="seventh_place_points">877 pts</string>
    <string name="eighth_place_points">845 pts</string>
    <string name="ninth_place_points">701 pts</string>
    <string name="tenth_place_points">536 pts</string>

    <string name="gold_medal">Gold Medal</string>
    <string name="silver_medal">Silver Medal</string>
    <string name="bronze_medal">Bronze Medal</string>
    <string name="bck_btn">Back</string>


    <string name="top_banner_bg">Top banner background</string>
    <string name="profile_icon_inside_banner">Profile icon inside banner</string>
    <string name="app_logo">App Logo</string>



    <string name="app_title">Unimeme</string>
<!--    <string name="post_author_1">Post author 1</string>-->
    <string name="post_image_description">Post image description</string>
    <string name="post_caption_1">Me when classes end and I get to go home</string>
<!--    <string name="post_author_2">Post author 2</string>-->
    <string name="post_caption_2">Average 8am lecture be like</string>
<!--    <string name="post_author_3">Post author 3</string>-->
    <string name="post_caption_3">Just hanging out at Beaumont Tower</string>
    <string name="post_location_format">📍 %.5f, %.5f</string>
    <string name="post_location_unavailable">📍 Location unavailable</string>
    <string name="post_location_permission_denied">📍 Location permission denied</string>
    <string name="post_location_beal_gardens">📍 Beal Botanical Garden</string>
    <string name="post_location_online">📍 Virtual Classroom</string>
    <string name="post_location_beaumont">📍 Beaumont Tower</string>
    <string name="likes_format">%1$d likes</string>
    <string name="sort_option_recent">Most Recent</string>
    <string name="sort_option_liked">Most Liked</string>
    <string name="sort_spinner_content_description">Sort posts</string>
    <string-array name="post_sort_options">
        <item>@string/sort_option_recent</item>
        <item>@string/sort_option_liked</item>
    </string-array>

    <string name="button_daily_challenge">Daily Challenge</string>
    <string name="button_add_post">Add Post</string>

    <string name="photo_preview">Photo Preview</string>

    <string name="you_as_user">You</string>
    <string name="captured_image_view">Captured image view</string>
    <string name="photo_preview_overlay">Photo preview overlay</string>
    <string name="write_a_caption">Write a caption…</string>
    <string name="add_a_caption">Add a caption…</string>
    <string name="post_image">Post image</string>
    <string name="capture">Capture</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="continue_next">Continue</string>
    <string name="grayscale">Grayscale</string>
    <string name="sepia">Sepia</string>
    <string name="bright">Bright</string>
    <string name="cool">Cool</string>
    <string name="reset">Reset</string>
    <string name="upload_from_library">Upload</string>
    <string name="media_picker_title">Upload from Library</string>
    <string name="selected_media_preview">Selected media preview</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="no_media_selected">Please choose a photo to continue.</string>
    <string name="add_post_title">Add a photo</string>
    <string name="add_post_option_camera">Take Photo</string>
    <string name="add_post_option_gallery">Choose from Gallery</string>
    <string name="no_image_selected">Select an image before posting.</string>
    <string name="post_success_message">Posted!</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="camera_permission_needed_title">Camera Permission Needed</string>
    <string name="camera_permission_needed_message">You’ve permanently denied camera access. Please enable it in Settings to take photos.</string>
    <string name="open_settings">Open Settings</string>

    <string name="create_post_posting_as">Posting as %1$s</string>
    <string name="create_post_take_photo">Take Photo</string>
    <string name="create_post_retake_photo">Retake Photo</string>
    <string name="create_post_location_label">Location:</string>
    <string name="create_post_location_disabled">Location sharing disabled</string>
    <string name="create_post_location_loading">Loading location…</string>
    <string name="create_post_location_permission_explanation">Location permission is required to attach your location.</string>
    <string name="create_post_location_hardware_unavailable">Location services unavailable</string>
    <string name="create_post_location_value">%1$s°, %2$s°</string>
    <string name="create_post_location_unavailable">Location unavailable</string>
    <string name="create_post_camera_permission_explanation">Camera permission is required to take a photo.</string>
    <string name="create_post_camera_unavailable">No camera available on this device.</string>
    <string name="create_post_camera_error">Could not open the camera.</string>
    <string name="create_post_no_photo_error">Take a photo before posting.</string>
    <string name="create_post_upload_success">Post uploaded!</string>
    <string name="create_post_image_preview_content_description">Captured image preview</string>
    <string name="create_post_upload">Upload Post</string>
    <string name="create_post_cancel">Cancel</string>

    <!-- Sign up / terms -->
    <string name="signup">Create account</string>
    <string name="new_member">New member?</string>
    <string name="view_terms">View Terms &amp; Privacy</string>
    <string name="tos_privacy_consent">I agree to the Terms of Service and Privacy Policy</string>
    <string name="data_consent">I consent to personal data collection</string>

    <string name="signup_username_hint">Username</string>
    <string name="signup_bio_hint">Bio (optional)</string>
    <string name="signup_password_hint">Password (min 8: letters &amp; digits)</string>
    <string name="signup_confirm_hint">Confirm password</string>

    <string name="err_username_required">Username is required</string>
    <string name="err_password_invalid">Password must be 8+ chars incl. a letter and a digit</string>
    <string name="err_password_mismatch">Passwords do not match</string>
    <string name="err_consent_required">Please accept the required consents</string>
    <string name="signup_success">Account created (UI only)</string>


</resources>
